Fixed coursework overflow issue

--- a/src/Styles/Resume.css
+++ b/src/Styles/Resume.css
@@ -81,7 +81,6 @@
 
 .resume-coursework-list{
     display: grid;
-    background-color: grey;
     margin-top: 1rem;
     grid-template-columns: repeat(4, 1fr);
 }
